--- a/exercises/todo/client/css/main.css
+++ b/exercises/todo/client/css/main.css
@@ -85,7 +85,7 @@ a:after {
 	text-align:center;
 	background-attachment: relative;
 	background-position: center center;
-	min-height: 250px;
+	min-height: 300px;
 	width: 100%;
 
     -webkit-background-size: 100%;
@@ -102,7 +102,7 @@ a:after {
 #headerwrap h1 {
 	margin-top: 50px;
 	color: white;
-	font-size: 70px;
+	font-size: 60px;
 	font-weight: 700;
 }
 
@@ -111,7 +111,7 @@ a:after {
 	font-size: 30px;
 	font-weight: 100;
     font-family: 'EB Garamond', serif;
-    font-style: oblique;
+    font-style: italic;
 }
 
 #headerwrap .logo {
@@ -185,12 +185,9 @@ a:after {
 	letter-spacing: 0.15em;
 	line-height: 40px;
 	text-transform: uppercase;
-	color: #ffffff;
+	color: #D4A017;
 	margin-top: 20px;
-}
-
-.menu h1.logo a:hover {
-	color: #f85c37;
+  cursor:default;
 }
 
 .menu img.logo {
@@ -211,6 +208,7 @@ a:after {
 
 .menu a:hover {
 	color: #ffffff;
+  cursor:pointer;
 }
 
 .menu a:active {
@@ -308,4 +306,64 @@ a:after {
 		-ms-transition: all .1s ease-in-out;
 		 -o-transition: all .1s ease-in-out;
 			transition: all .1s ease-in-out;
+}
+
+.modal-input-title {
+  width: 100%;
+}
+
+.modal-input-content {
+  width: 100%;
+  margin-top: 10px;
+}
+
+.custom-thead{
+  font-size:25px;
+  font-family: 'EB Garamond', serif;
+}
+
+.custom-thead th:hover {
+  cursor: pointer;
+}
+
+.custom-tbody{
+  color:white;
+  font-size:20px;
+}
+
+.btn-custom {
+  border: none;
+	font-weight: 700;
+	line-height: 20px;
+	letter-spacing: 0.1em;
+  font-size: 20px;
+	text-transform: uppercase;
+  background-color: lightgray;
+  outline: none;
+  color:#808080;
+  margin-left: 15px;
+  margin-bottom: 20px;
+  -webkit-font-smoothing: antialiased;
+  -webkit-overflow-scrolling: touch;
+  transition: color 0.1s linear;
+  transition: background 0.1s linear;
+}
+
+.btn-custom:hover {
+  transition: color 0.1s linear;
+  transition: background 0.1s linear;
+  border: none;
+  outline: none;
+  background-color: orange;
+  color:white;
+  cursor: pointer;
+}
+
+
+.btn-custom i {
+  font-size:10px;
+}
+
+#todo-list-table {
+  display: none;
 }
